<resources>
    <string name="app_name">MaterialNasa</string>
    <string name="title_pod">POD</string>
    <string name="title_explore">Explore</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="pod_title">Picture of the day</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="chip_yesterday">Yesterday</string>
    <string name="chip_today">Today</string>
    <string name="chip_two_days_ago">Two days ago</string>
    <string name="gallery_image_desc">Gallery image</string>
    <string name="add_to_favorites_desc">Add to favorites</string>
    <string name="remove">remove</string>
    <string name="remove_item">Remove item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mars_fragment_title">Photos from Mars rover</string>
    <string name="mars_fragment_choose_camera">Choose camera</string>
    <string name="date">mm/dd/yyyy</string>
    <string name="picture_from_mars">Picture from Mars</string>
    <string name="drag_handle">Drag handle</string>
    <string name="highlight">Light</string>
    <string name="select_photo">Add photo</string>
    <string name="take_photo">Use camera…</string>
    <string name="choose_from_library">Choose from library…</string>
    <string name="fab">FAB</string>
    <string name="plus_icon">Plus icon</string>
    <string name="settings_storage_for_photos">Use external storage to save photos</string>
    <string name="settings_title">Settings</string>

    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">Nasa Search</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>

</resources>