<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_pod"
        android:icon="@drawable/ic_pod_black"
        android:title="@string/title_pod" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_dashboard_black"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_telescope"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/title_settings" />

</menu>