<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pod">

    <fragment
        android:id="@+id/navigation_pod"
        android:name="com.rodionovmax.materialnasa.ui.pod.PodFragment"
        android:label="@string/title_pod"
        tools:layout="@layout/fragment_pod" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.rodionovmax.materialnasa.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.rodionovmax.materialnasa.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.rodionovmax.materialnasa.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rodionovmax.materialnasa.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_search" />


</navigation>