<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_photo"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        style="@style/DialogTextButton"
        android:layout_marginHorizontal="24dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/library_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_library"
        style="@style/DialogTextButton"
        android:layout_marginHorizontal="24dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>