<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pod.PodFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="?actionBarSize"
            android:layout_marginTop="12dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pod_screen_title"
                style="@style/ScreenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pod_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pod_screen_title"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_today"
                    style="@style/ChipChoice" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_yesterday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_yesterday"
                    style="@style/ChipChoice" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_two_days_ago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_two_days_ago"
                    style="@style/ChipChoice" />

            </com.google.android.material.chip.ChipGroup>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pod_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_group"
                app:srcCompat="@drawable/ic_no_photo_vector"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/add_to_gallery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/pod_image"
                app:layout_constraintEnd_toEndOf="@id/pod_image"
                android:src="@drawable/ic_bookmark"
                android:background="@android:color/transparent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/add_to_favorites_desc" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pod_picture_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text = "Picture of the day title"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pod_image"
                app:layout_constraintEnd_toStartOf="@+id/highlight_text_switch"
                style="@style/TextTitle" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/highlight_text_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/highlight"
                app:layout_constraintEnd_toEndOf="@id/pod_image"
                app:layout_constraintTop_toBottomOf="@id/pod_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pod_picture_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pod_picture_title"
                style="@style/TextDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ProgressBar"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>