<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gallery_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="12dp">

    <ImageView
        android:id="@+id/gallery_item_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:contentDescription="@string/gallery_image_desc"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/drag_handle_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:tint="@color/light_grey"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/gallery_item_image"
        app:layout_constraintTop_toTopOf="@+id/gallery_item_image"
        app:srcCompat="@drawable/ic_hamburger_menu"
        android:contentDescription="@string/drag_handle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gallery_item_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gallery_item_image"
        tools:text="Title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gallery_item_copyright"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gallery_item_title"
        tools:text="Copyright" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gallery_item_date"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/gallery_item_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Date" />

    <!--<TextView
        android:id="@+id/tvDelete"
        android:layout_width="100dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/gallery_card"
        app:layout_constraintTop_toTopOf="@id/gallery_card"
        app:layout_constraintBottom_toBottomOf="@id/gallery_card"
        android:gravity="center"
        android:text="@string/remove"
        android:background="@color/red"
        android:textSize="12pt"
        android:textColor="@color/white" />-->

    <ImageButton
        android:id="@+id/remove_btn"
        android:layout_width="100dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/gallery_card"
        app:layout_constraintTop_toTopOf="@id/gallery_card"
        app:layout_constraintBottom_toBottomOf="@id/gallery_card"
        android:src="@drawable/ic_delete"
        android:gravity="center"
        android:background="@color/red"
        android:textSize="12pt"
        android:contentDescription="@string/remove_item" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#ddd" />


</androidx.constraintlayout.widget.ConstraintLayout>

